CVS_SILENT Corrected typographical errors
When replying, please CC me - I'm not subscribed

--- a/parts/svn/svnoptions.ui
+++ b/parts/svn/svnoptions.ui
@@ -44,7 +44,7 @@
             </rect>
         </property>
         <property name="text">
-            <string>Always use the force option (e.g. removing files not in the repositery)</string>
+            <string>Always use the force option (e.g. removing files not in the repository)</string>
         </property>
     </widget>
     <widget class="QCheckBox">
