--- a/lib/project/runoptionswidgetbase.ui
+++ b/lib/project/runoptionswidgetbase.ui
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>467</width>
-            <height>385</height>
+            <width>424</width>
+            <height>337</height>
         </rect>
     </property>
     <property name="caption">
@@ -29,10 +29,16 @@
             <property name="name">
                 <cstring>GroupBox1</cstring>
             </property>
+            <property name="frameShape">
+                <enum>Box</enum>
+            </property>
+            <property name="frameShadow">
+                <enum>Sunken</enum>
+            </property>
             <property name="title">
                 <string>Run</string>
             </property>
-            <grid>
+            <vbox>
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
@@ -42,20 +48,7 @@
                 <property name="spacing">
                     <number>6</number>
                 </property>
-                <widget class="QLineEdit" row="1" column="0">
-                    <property name="name">
-                        <cstring>mainprogram_edit</cstring>
-                    </property>
-                </widget>
-                <widget class="QLabel" row="2" column="0">
-                    <property name="name">
-                        <cstring>progargs_label_3</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Program arguments:</string>
-                    </property>
-                </widget>
-                <widget class="QLabel" row="0" column="0" rowspan="1" colspan="2">
+                <widget class="QLabel">
                     <property name="name">
                         <cstring>mainprogram_label_3</cstring>
                     </property>
@@ -63,20 +56,25 @@
                         <string>Main program (relative to project directory):</string>
                     </property>
                 </widget>
-                <widget class="QPushButton" row="1" column="1">
+                <widget class="QLineEdit">
                     <property name="name">
-                        <cstring>browseMain</cstring>
-                    </property>
-                    <property name="text">
-                        <string>Browse...</string>
+                        <cstring>mainprogram_edit</cstring>
                     </property>
                 </widget>
-                <widget class="QLineEdit" row="3" column="0" rowspan="1" colspan="2">
+                <widget class="QLabel">
+                    <property name="name">
+                        <cstring>progargs_label_3</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Program arguments:</string>
+                    </property>
+                </widget>
+                <widget class="QLineEdit">
                     <property name="name">
                         <cstring>progargs_edit</cstring>
                     </property>
                 </widget>
-            </grid>
+            </vbox>
         </widget>
         <widget class="QGroupBox">
             <property name="name">
@@ -226,12 +224,6 @@
         <receiver>run_options_widget</receiver>
         <slot>removeVarClicked()</slot>
     </connection>
-    <connection>
-        <sender>browseMain</sender>
-        <signal>clicked()</signal>
-        <receiver>run_options_widget</receiver>
-        <slot>browseMainProgram()</slot>
-    </connection>
 </connections>
 <tabstops>
     <tabstop>mainprogram_edit</tabstop>
@@ -243,7 +235,6 @@
 </tabstops>
 <slots>
     <slot access="protected">addVarClicked()</slot>
-    <slot>browseMainProgram()</slot>
     <slot access="protected">removeVarClicked()</slot>
 </slots>
 <layoutdefaults spacing="6" margin="11"/>
